--- a/.github/workflows/run-container.yml
+++ b/.github/workflows/run-container.yml
@@ -1,15 +1,11 @@
-name: Run Docker Container
+name: Run Docker Container from Image URI
 
 on:
   workflow_dispatch:
     inputs:
-      app_name:
-        description: "Application / ECR repo name"
+      image_uri:
+        description: "Full Docker image URI (including tag)"
         required: true
-      image_tag:
-        description: "Image tag"
-        required: true
-        default: "latest"
       container_name:
         description: "Docker container name"
         required: true
@@ -20,14 +16,11 @@ on:
       container_port:
         description: "Container port"
         required: true
-        default: "80"
+        default: "5000"
 
 jobs:
   run-container:
     runs-on: ubuntu-latest
-
-    env:
-      ECR_REPO: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ inputs.app_name }}
 
     steps:
       - name: Run container on EC2
@@ -37,15 +30,23 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            set -e
+
+            echo "Logging in to Amazon ECR..."
             aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
-            | docker login --username AWS --password-stdin $ECR_REPO
+            | docker login --username AWS --password-stdin $(echo "${{ inputs.image_uri }}" | cut -d/ -f1)
 
-            docker pull $ECR_REPO:${{ inputs.image_tag }}
+            echo "Pulling image..."
+            docker pull ${{ inputs.image_uri }}
 
+            echo "Stopping existing container if any..."
             docker stop ${{ inputs.container_name }} || true
             docker rm ${{ inputs.container_name }} || true
 
+            echo "Running container..."
             docker run -d \
               --name ${{ inputs.container_name }} \
               -p ${{ inputs.host_port }}:${{ inputs.container_port }} \
-              $ECR_REPO:${{ inputs.image_tag }}
+              ${{ inputs.image_uri }}
+
+            echo "Container started successfully"
