--- a/.github/workflows/create-student.yml
+++ b/.github/workflows/create-student.yml
@@ -16,10 +16,15 @@ jobs:
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
+          username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            sudo mkdir -p /etc/skel/.docker
+            sudo cp -r /home/${{ secrets.EC2_USER }}/.docker/* /etc/skel/.docker/ || true
             set -e
+
+            sudo useradd -m ${{ inputs.student_name }}
+            sudo usermod -aG docker ${{ inputs.student_name }}
 
             USER_LIST="${{ github.event.inputs.usernames }}"
 
