--- a/.github/workflows/create-student.yml
+++ b/.github/workflows/create-student.yml
@@ -23,9 +23,6 @@ jobs:
             sudo cp -r /home/${{ secrets.EC2_USER }}/.docker/* /etc/skel/.docker/ || true
             set -e
 
-            sudo useradd -m ${{ inputs.student_name }}
-            sudo usermod -aG docker ${{ inputs.student_name }}
-
             USER_LIST="${{ github.event.inputs.usernames }}"
 
             IFS=',' read -ra USERS <<< "$USER_LIST"
@@ -38,6 +35,7 @@ jobs:
               else
                 echo "Creating user: $USER"
                 sudo useradd -m -s /bin/bash "$USER"
+                sudo usermod -aG docker "$USER"
                 sudo chown -R "$USER:$USER" "/home/$USER"
               fi
             done
